# gc-3ds-input-redirection

./: CMakeLists.txt  README.md  gc-3ds-input-redirection.cbp  gc-3ds-input-redirection.depend  gc-3ds-input-redirection.layout
cmake_work/: FindConfig.cmake
include/: addrslist.h  binding.h  config.h  gc_controller.h  mapping.h  redirection.h
scripts/3ds-hook/: 3ds-hook.py
src/: addrslist.c  binding.c  binding.h  config.c  gc_controller.c  gc_controller.h  main.c  mapping.c  mapping.h  redirection.c  redirection.h
